--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
 [build-system]
 requires = [
     "setuptools>=61.0",
+    "pytest-notebook",
+    "nbval",
 ]
 build-backend = "setuptools.build_meta"
 
