--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,11 +24,14 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install pytest pytest-notebook nbval
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+	pip install .
+
     - name: Test with pytest
       run: |
         py.test --nbval-lax
