--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "jax",
     "jaxopt",
     "plotly",
-    "matplotlib"
+    "matplotlib",
+    "ipywidgets",
 ]
 requires-python = ">=3.7"
 
