--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,11 +28,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest pytest-notebook nbval
+        python -m pip install pytest testbook
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install .
 
     - name: Test with pytest
       run: |
-        py.test --nbval-lax
+        pytest
 
