--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,7 @@
 [build-system]
 requires = [
     "setuptools>=61.0",
-    "pytest-notebook",
-    "nbval",
+    "testbook",
 ]
 build-backend = "setuptools.build_meta"
 
