--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest testbook
+        python -m pip install pytest testbook jupyterlab
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install .
 
