--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,6 +27,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt install ffmpeg
         python -m pip install --upgrade pip
         python -m pip install pytest testbook jupyterlab
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
