--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        apt-get update 
+        sudo apt-get update 
         sudo apt install ffmpeg
         python -m pip install --upgrade pip
         python -m pip install pytest testbook jupyterlab
